tests/snapshots/snapshots__budget_superstruct_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1060 words)

Readme.md
    42→### Usage
    43→
      →…
   145→### Why?
   146→
      →…
   167→### Principles
   168→
      →…
   181→### Demo
   182→
      →…
   189→### Examples
   190→
      →…
   205→### Documentation
   206→
      →…
   231→### License
   232→
      →…
docs/guides/01-getting-started.md
     1→# Getting Started
     2→
     3→## Installing Superstruct
     4→
     5→To install Superstruct run:
     6→
     7→```bash
     8→npm install --save superstruct
     9→```
    10→
    11→And then you can import it:
    12→
    13→```ts
    14→import { object, string, number } from 'superstruct'
    15→
    16→const User = object({
    17→  id: number(),
    18→  name: string(),
    19→})
    20→```
    21→
    22→If you'd like, you can use a wildcard import:
    23→
    24→```ts
    25→import * as s from 'superstruct'
    26→
    27→const User = s.object({
    28→  id: s.number(),
    29→  name: s.string(),
    30→})
    31→```
    32→
      →…
    41→## Defining Structs
    42→
      →…
docs/guides/02-validating-data.md
     1→# Validating Data
     2→
      →…
     5→## Primitive Values
     6→
      →…
    37→## Composed Values
    38→
      →…
   114→## Optional Values
   115→
      →…
   157→## Custom Values
   158→
      →…
docs/guides/03-coercing-data.md
     1→# Coercing Data
     2→
      →…
     7→## Default Values
     8→
      →…
    49→## Custom Coercions
    50→
      →…
docs/guides/04-refining-validation.md
     1→# Refining Validation
     2→
      →…
     7→## Built-in Refinements
     8→
      →…
    47→## Custom Refinements
    48→
      →…
docs/guides/05-handling-errors.md
     1→# Handling Errors
     2→
      →…
    53→## Customizing Errors
    54→
      →…
   102→## Multiple Failures
   103→
      →…
docs/guides/06-using-typescript.md
     1→# Using TypeScript
     2→
      →…
     7→## Narrowing Types
     8→
      →…
    37→## Describing Types
    38→
      →…
    55→## Inferring Types
    56→
      →…
docs/readme.md
     7→### Usage
     8→
     9→Superstruct allows you to define the shape of data you want to validate:
    10→
    11→```js
    12→import { assert, object, number, string, array } from 'superstruct'
    13→
    14→const Article = object({
    15→  id: number(),
    16→  title: string(),
    17→  tags: array(string()),
    18→  author: object({
    19→    id: number(),
    20→  }),
    21→})
    22→
    23→const data = {
    24→  id: 34,
    25→  title: 'Hello World',
    26→  tags: ['news', 'features'],
    27→  author: {
    28→    id: 1,
    29→  },
    30→}
    31→
    32→assert(data, Article)
      →…
docs/reference/core.md
     3→### `assert`
     4→
     5→`assert<T>(value: unknown, struct: Struct<T>, message?: string) => asserts value is T`
     6→
     7→```ts
     8→assert(value, User, 'The user is invalid!')
     9→```
    10→
      →…
docs/reference/typescript.md
     7→### `Describe`
     8→
     9→The `Describe` utility returns a type representing a struct for a given valid value type. This allows you to ensure you're writing your struct definitions properly, for example:
    10→
    11→```ts
    12→type User = {
    13→  id: number
    14→  name: string
      →…
docs/resources/faq.md
     1→# FAQ
     2→
      →…
     5→### How can I allow unknown keys with `object` structs?
     6→
      →…
    11→### Why not have a built-in `json` struct?
    12→
      →…
docs/resources/links.md
     1→# Resources
     2→
      →…
     5→## Libraries
     6→
      →…
docs/summary.md
     3→## Guides
     4→
     5→- [Getting Started](./guides/01-getting-started.md)
     6→- [Validating Data](./guides/02-validating-data.md)
     7→- [Coercing Data](./guides/03-coercing-data.md)
     8→- [Refining Validation](./guides/04-refining-validation.md)
     9→- [Handling Errors](./guides/05-handling-errors.md)
    10→- [Using TypeScript](./guides/06-using-typescript.md)
    11→
    12→## API Reference
    13→
    14→- [Core](./reference/core.md)
    15→- [Types](./reference/types.md)
    16→- [Refinements](./reference/refinements.md)
    17→- [Coercions](./reference/coercions.md)
    18→- [Utilities](./reference/utilities.md)
    19→- [Errors](./reference/errors.md)
    20→- [TypeScript](./reference/typescript.md)
    21→
    22→## Resources
    23→
    24→- [FAQ](./resources/faq.md)
    25→- [Links](./resources/links.md)
src/error.ts
     5→export type Failure …
    25→export class StructError extends TypeError {
    26→  value: any
    27→  key!: any
    28→  type!: string
    29→  refinement!: string | undefined
    30→  path!: Array<any>
    31→  branch!: Array<any>
    32→  failures: () => Array<Failure>;
    33→  [x: string]: any
    34→
    35→  constructor(failure: Failure, failures: () => Generator<Failure>) {
    36→    let cached: Array<Failure> | undefined
    37→    const { message, explanation, ...rest } = failure
    38→    const { path } = failure
    39→    const msg =
      →…
src/struct.ts
    10→export class Struct<T = unknown, S = unknown> {
    11→  readonly TYPE!: T
    12→  type: string
    13→  schema: S
    14→  coercer: (value: unknown, context: Context) => unknown
    15→  validator: (value: unknown, context: Context) => Iterable<Failure>
    16→  refiner: (value: T, context: Context) => Iterable<Failure>
    17→  entries: (
    18→    value: unknown,
    19→    context: Context
    20→  ) => Iterable<[string | number, unknown, Struct<any> | Struct<never>]>
    21→
    22→  constructor(props: {
    23→    type: string
    24→    schema: S
    63→  /**
      →…
    67→  assert(value: unknown, message?: string): asserts value is T {
    71→  /**
      →…
    75→  create(value: unknown, message?: string): T {
    79→  /**
      →…
    83→  is(value: unknown): value is T {
    87→  /**
      →…
    93→  mask(value: unknown, message?: string): T {
    97→  /**
      →…
   107→  validate(
   108→    value: unknown,
   109→    options: {
   119→/**
      →…
   123→export function assert<T, S>(
   124→  value: unknown,
   125→  struct: Struct<T, S>,
   126→  message?: string
   127→): asserts value is T {
   135→/**
      →…
   139→export function create<T, S>(
   140→  value: unknown,
   141→  struct: Struct<T, S>,
   142→  message?: string
   143→): T {
   153→/**
      →…
   157→export function mask<T, S>(
   158→  value: unknown,
   159→  struct: Struct<T, S>,
   160→  message?: string
   161→): T {
   171→/**
      →…
   175→export function is<T, S>(value: unknown, struct: Struct<T, S>): value is T {
   180→/**
      →…
   185→export function validate<T, S>(
   186→  value: unknown,
   187→  struct: Struct<T, S>,
   188→  options: {
   221→export type Context …
   231→export type Infer …
   237→export type Describe …
   243→export type Result …
   253→export type Coercer …
   259→export type Validator …
   266→export type Refiner …
src/structs/refinements.ts
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
    22→  if (value instanceof Map || value instanceof Set) {
      →…
src/structs/types.ts
    33→export function array<T extends Struct<any>>(Element?: T): any {
   105→export function enums<U extends string | number, T extends readonly U[]>(
   106→  values: T
   107→): any {
   204→export function literal<T>(constant: T): any {
   230→export function map<K, V>(Key?: Struct<K>, Value?: Struct<V>): any {
   298→export function object<S extends ObjectSchema>(schema?: S): any {
   415→export function set<T>(Element?: Struct<T>): any {
src/structs/utilities.ts
    60→export function assign(...Structs: Struct<any>[]): any {
src/utils.ts
     4→/**
     5→ * Check if a value is an iterator.
     6→ */
     7→
     8→function isIterable<T>(x: unknown): x is Iterable<T> {
     9→  return isObject(x) && typeof x[Symbol.iterator] === 'function'
    10→}
    12→/**
      →…
    16→export function isObject(x: unknown): x is object {
    20→/**
      →…
    24→export function isNonArrayObject(x: unknown): x is object {
    28→/**
      →…
    32→export function isPlainObject(x: unknown): x is { [key: string]: any } {
    41→/**
      →…
    45→export function print(value: any): string {
    53→/**
      →…
    58→export function shiftIterator<T>(input: Iterator<T>): T | undefined {
    63→/**
      →…
    67→export function toFailure<T, S>(
    68→  result: string | boolean | Partial<Failure>,
    69→  context: Context,
    70→  struct: Struct<T, S>,
    71→  value: any
    72→): Failure | undefined {
   202→export type UnionToIntersection …
   212→export type Assign …
   218→export type EnumSchema …
   227→export type IsMatch …
   233→export type IsExactMatch …
   242→export type IsRecord …
   251→export type IsTuple …
   267→export type IsUnion …
   277→export type ObjectSchema …
   283→export type ObjectType …
   291→export type OmitBy …
   300→export type Optionalize …
   307→export type PartialObjectSchema …
   315→export type PickBy …
   324→export type Simplify …
   328→export type If<B extends Boolean, Then, Else> = B extends true ? Then : Else
   334→export type StructSchema …
   379→export type TupleSchema …
   385→export type AnyStruct …
   394→export type InferStructTuple …
   402→type _InferTuple …
