tests/snapshots/snapshots__budget_superstruct_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (2011 tokens)

Readme.md
    42→### Usage
   145→### Why?
   167→### Principles
   181→### Demo
   189→### Examples
   205→### Documentation
   231→### License

docs/readme.md
     7→### Usage

docs/reference/core.md
     1→# Core

docs/reference/errors.md
     1→# Errors

docs/reference/types.md
     1→# Types

examples/README.md
     1→# Examples

examples/package.json

jsr.json
     2→  "$schema": "https://jsr.io/schema/config-file.v1.json",
     3→  "name": "@superstruct/core",
     4→  "version": "2.0.2",
     5→  "exports": "./src/index.ts",
     6→  "publish": {
     8→  }
     9→}

package.json

src/error.ts
     2→ * A `StructFailure` represents a single specific failure in validation.
     5→export type Failure = {
    17→ * `StructError` objects are thrown (or returned) when validation fails.
    18→ *
    19→ * Validation logic is design to exit early for maximum performance. The error
    20→ * represents the first error encountered during validation. For more detail,
      → …
    25→export class StructError extends TypeError {
    26→  value: any
    27→  key!: any
    28→  type!: string
    29→  refinement!: string | undefined
    30→  path!: Array<any>
    31→  branch!: Array<any>
    32→  failures: () => Array<Failure>;
    33→  [x: string]: any
    34→
    35→  constructor(failure: Failure, failures: () => Generator<Failure>) {
    36→    let cached: Array<Failure> | undefined
      →    …

src/struct.ts
     1→import { toFailures, shiftIterator, StructSchema, run } from './utils.js'
     2→import { StructError, Failure } from './error.js'
     5→ * `Struct` objects encapsulate the validation logic for a specific type of
     6→ * values. Once constructed, you use the `assert`, `is` or `validate` helpers to
     7→ * validate unknown input data against the struct.
    10→export class Struct<T = unknown, S = unknown> {
    11→  readonly TYPE!: T
    12→  type: string
    13→  schema: S
    14→  coercer: (value: unknown, context: Context) => unknown
    15→  validator: (value: unknown, context: Context) => Iterable<Failure>
    16→  refiner: (value: T, context: Context) => Iterable<Failure>
    17→  entries: (
    18→    value: unknown,
    19→    context: Context
    20→  ) => Iterable<[string | number, unknown, Struct<any> | Struct<never>]>
    21→
    22→  constructor(props: {
    23→    type: string
    24→    schema: S
    25→    coercer?: Coercer
    26→    validator?: Validator
    27→    refiner?: Refiner<T>
    28→    entries?: Struct<T, S>['entries']
    29→  }) {
    30→    const {
    31→      type,
      →      …
    67→  assert …
    75→  create …
    83→  is …
    93→  mask …
   107→  validate …
   123→export function assert …
   139→export function create …
   157→export function mask …
   175→export function is …
   185→export function validate …
   221→export type Context …
   231→export type Infer …
   237→export type Describe …
   243→export type Result …
   253→export type Coercer …
   259→export type Validator …
   266→export type Refiner …

src/structs/coercions.ts
     1→import { Struct, is, Coercer } from '../struct.js'
     2→import { isPlainObject } from '../utils.js'
     3→import { string, unknown } from './types.js'
     6→ * Augment a `Struct` to add an additional coercion step to its input.
     7→ *
      → …
    16→export function coerce<T, S, C>(
    17→  struct: Struct<T, S>,
    18→  condition: Struct<C, any>,
    19→  coercer: Coercer<C>
    20→): Struct<T, S> {
    32→ * Augment a struct to replace `undefined` values with a default.
    33→ *
      → …
    38→export function defaulted<T, S>(
    39→  struct: Struct<T, S>,
    40→  fallback: any,
    41→  options: {
    42→    strict?: boolean
    43→  } = {}
    44→): Struct<T, S> {
    73→ * Augment a struct to trim string inputs.
    74→ *
      → …
    79→export function trimmed<T, S>(struct: Struct<T, S>): Struct<T, S> {

src/structs/refinements.ts
     1→import { Struct, Refiner } from '../struct.js'
     2→import { toFailures } from '../utils.js'
     8→export function empty …
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
    33→export function max …
    55→export function min …
    77→export function nonempty …
    93→export function pattern …
   109→export function size …
   146→export function refine …

src/structs/types.ts
     1→import { Infer, Struct } from '../struct.js …
     2→import { define } from './utilities.js …
     3→import { …
    33→export function array …
   105→export function enums …
   204→export function literal …
   230→export function map …
   298→export function object …
   415→export function set …

src/structs/utilities.ts
     1→import { Context, Struct, Validator } from '../struct.js …
     2→import { …
     8→import { object, optional, type } from './types.js …
    60→export function assign(...Structs: Struct<any>[]): any {
    71→export function define …
    80→export function deprecated …
   106→export function dynamic …
   140→export function lazy …
   171→export function omit …
   197→export function partial …
   221→export function pick …
   247→export function struct …

src/utils.ts
     1→import { Struct, Infer, Result, Context, Describe } from './struct.js'
     2→import { Failure } from './error.js'
     5→ * Check if a value is an iterator.
     8→function isIterable<T>(x: unknown): x is Iterable<T> {
    13→ * Check if a value is a plain object.
    16→export function isObject(x: unknown): x is object {
    21→ * Check if a value is a non-array object.
    24→export function isNonArrayObject(x: unknown): x is object {
    29→ * Check if a value is a plain object.
    32→export function isPlainObject(x: unknown): x is { [key: string]: any } {
    42→ * Return a value as a printable string.
    45→export function print(value: any): string {
    54→ * Shifts (removes and returns) the first value from the `input` iterator.
    55→ * Like `Array.prototype.shift()` but for an `Iterator`.
    58→export function shiftIterator<T>(input: Iterator<T>): T | undefined {
    64→ * Convert a single validation result to a failure.
    67→export function toFailure<T, S>(
    68→  result: string | boolean | Partial<Failure>,
    69→  context: Context,
    70→  struct: Struct<T, S>,
    71→  value: any
    72→): Failure | undefined {
   328→export type If<B extends Boolean, Then, Else> = B extends true ? Then : Else
   402→type _InferTuple …

test/index.ts
     2→ * A helper for testing type signatures.
     5→export function test<T>(fn: (x: unknown) => T) {}

tsconfig.json
     2→  "include": ["./src/**/*.ts"],
     3→  "compilerOptions": {
    16→  }
    17→}
