tests/snapshots/snapshots__budget_superstruct_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4020 tokens)

Changelog.md
     1→# Changelog

Readme.md
    42→### Usage
   145→### Why?
   167→### Principles
   181→### Demo
   189→### Examples
   205→### Documentation
   231→### License

docs/guides/01-getting-started.md
     1→# Getting Started

docs/guides/02-validating-data.md
     1→# Validating Data

docs/guides/03-coercing-data.md
     1→# Coercing Data

docs/guides/04-refining-validation.md
     1→# Refining Validation

docs/guides/05-handling-errors.md
     1→# Handling Errors

docs/guides/06-using-typescript.md
     1→# Using TypeScript

docs/readme.md
     7→### Usage

docs/reference/coercions.md
     1→# Coercions

docs/reference/core.md
     1→# Core

docs/reference/errors.md
     1→# Errors

docs/reference/refinements.md
     1→# Refinements

docs/reference/types.md
     1→# Types

docs/reference/typescript.md
     1→# TypeScript
     5→## Utilities

docs/reference/utilities.md
     1→# Utilities

docs/resources/faq.md
     1→# FAQ

docs/resources/links.md
     1→# Resources
     5→## Libraries

docs/summary.md

examples/README.md
     1→# Examples

examples/package.json

jsr.json
     2→  "$schema": "https://jsr.io/schema/config-file.v1.json",
     3→  "name": "@superstruct/core",
     4→  "version": "2.0.2",
     5→  "exports": "./src/index.ts",
     6→  "publish": {
     8→  }
     9→}

package.json

rollup.config.js

src/error.ts
     2→ * A `StructFailure` represents a single specific failure in validation.
     5→export type Failure = {
     6→  value: any
     7→  key: any
      →  …
    17→ * `StructError` objects are thrown (or returned) when validation fails.
    18→ *
    19→ * Validation logic is design to exit early for maximum performance. The error
    20→ * represents the first error encountered during validation. For more detail,
    21→ * the `error.failures` property is a generator function that can be run to
    22→ * continue validation and receive all the failures in the data.
    25→export class StructError extends TypeError {
    26→  value: any
    27→  key!: any
    28→  type!: string
    29→  refinement!: string | undefined
    30→  path!: Array<any>
    31→  branch!: Array<any>
    32→  failures: () => Array<Failure>;
    33→  [x: string]: any
    34→
    35→  constructor(failure: Failure, failures: () => Generator<Failure>) {
    36→    let cached: Array<Failure> | undefined
    37→    const { message, explanation, ...rest } = failure
    38→    const { path } = failure
    39→    const msg =
      →    …

src/struct.ts
     1→import { toFailures, shiftIterator, StructSchema, run } from './utils.js'
     2→import { StructError, Failure } from './error.js'
     5→ * `Struct` objects encapsulate the validation logic for a specific type of
     6→ * values. Once constructed, you use the `assert`, `is` or `validate` helpers to
     7→ * validate unknown input data against the struct.
    10→export class Struct<T = unknown, S = unknown> {
    11→  readonly TYPE!: T
    12→  type: string
    13→  schema: S
    14→  coercer: (value: unknown, context: Context) => unknown
    15→  validator: (value: unknown, context: Context) => Iterable<Failure>
    16→  refiner: (value: T, context: Context) => Iterable<Failure>
    17→  entries: (
    18→    value: unknown,
    19→    context: Context
    20→  ) => Iterable<[string | number, unknown, Struct<any> | Struct<never>]>
    21→
    22→  constructor(props: {
    23→    type: string
    24→    schema: S
    25→    coercer?: Coercer
    26→    validator?: Validator
    27→    refiner?: Refiner<T>
    28→    entries?: Struct<T, S>['entries']
    29→  }) {
    30→    const {
    31→      type,
    32→      schema,
    33→      validator,
    34→      refiner,
      →      …
    67→  assert …
    75→  create …
    83→  is …
    93→  mask …
   107→  validate …
   123→export function assert …
   139→export function create …
   157→export function mask …
   175→export function is …
   185→export function validate …
   214→ * A `Context` contains information about the current location of the
   215→ * validation inside the initial input value. It also carries `mask`
   216→ * since it's a run-time flag determining how the validation was invoked
   217→ * (via `mask()` or via `validate()`), plus it applies recursively
   218→ * to all of the nested structs.
   221→export type Context = {
   222→  branch: Array<any>
      →  …
   228→ * A type utility to extract the type from a `Struct` class.
   231→export type Infer<T extends Struct<any, any>> = T['TYPE']
   234→ * A type utility to describe that a struct represents a TypeScript type.
   237→export type Describe<T> = Struct<T, StructSchema<T>>
   240→ * A `Result` is returned from validation functions.
   243→export type Result =
   244→  | boolean
   245→  | string
   246→  | Partial<Failure>
   247→  | Iterable<boolean | string | Partial<Failure>>
   250→ * A `Coercer` takes an unknown value and optionally coerces it.
   253→export type Coercer<T = unknown> = (value: T, context: Context) => unknown
   256→ * A `Validator` takes an unknown value and validates it.
   259→export type Validator = (value: unknown, context: Context) => Result
   262→ * A `Refiner` takes a value of a known type and validates it against a further
   263→ * constraint.
   266→export type Refiner<T> = (value: T, context: Context) => Result

src/structs/coercions.ts
     1→import { Struct, is, Coercer } from '../struct.js'
     2→import { isPlainObject } from '../utils.js'
     3→import { string, unknown } from './types.js'
     6→ * Augment a `Struct` to add an additional coercion step to its input.
     7→ *
     8→ * This allows you to transform input data before validating it, to increase the
     9→ * likelihood that it passes validation—for example for default values, parsing
    10→ * different formats, etc.
    11→ *
    12→ * Note: You must use `create(value, Struct)` on the value to have the coercion
    13→ * take effect! Using simply `assert()` or `is()` will not use coercion.
    16→export function coerce<T, S, C>(
    17→  struct: Struct<T, S>,
    18→  condition: Struct<C, any>,
    19→  coercer: Coercer<C>
    20→): Struct<T, S> {
    21→  return new Struct({
    22→    ...struct,
    23→    coercer: (value, ctx) => {
      →    …
    32→ * Augment a struct to replace `undefined` values with a default.
    33→ *
    34→ * Note: You must use `create(value, Struct)` on the value to have the coercion
    35→ * take effect! Using simply `assert()` or `is()` will not use coercion.
    38→export function defaulted<T, S>(
    39→  struct: Struct<T, S>,
    40→  fallback: any,
    41→  options: {
    42→    strict?: boolean
    43→  } = {}
    44→): Struct<T, S> {
    45→  return coerce(struct, unknown(), (x) => {
    46→    const f = typeof fallback === 'function' ? fallback() : fallback
    47→
      →…
    73→ * Augment a struct to trim string inputs.
    74→ *
    75→ * Note: You must use `create(value, Struct)` on the value to have the coercion
    76→ * take effect! Using simply `assert()` or `is()` will not use coercion.
    79→export function trimmed<T, S>(struct: Struct<T, S>): Struct<T, S> {
    80→  return coerce(struct, string(), (x) => x.trim())
    81→}

src/structs/refinements.ts
     1→import { Struct, Refiner } from '../struct.js'
     2→import { toFailures } from '../utils.js'
     8→export function empty …
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
    33→export function max …
    55→export function min …
    77→export function nonempty …
    93→export function pattern …
   109→export function size …
   146→export function refine …

src/structs/types.ts
     1→import { Infer, Struct } from '../struct.js …
     2→import { define } from './utilities.js …
     3→import { …
    19→export function any …
    33→export function array<T extends Struct<any>>(Element?: T): any {
    60→export function bigint …
    70→export function boolean …
    83→export function date …
   105→export function enums<U extends string | number, T extends readonly U[]>(
   106→  values: T
   107→): any {
   131→export function func …
   144→export function instance …
   159→export function integer …
   172→export function intersection …
   204→export function literal<T>(constant: T): any {
   230→export function map<K, V>(Key?: Struct<K>, Value?: Struct<V>): any {
   258→export function never …
   266→export function nullable …
   278→export function number …
   298→export function object<S extends ObjectSchema>(schema?: S): any {
   351→export function optional …
   367→export function record …
   402→export function regexp …
   415→export function set<T>(Element?: Struct<T>): any {
   442→export function string …
   456→export function tuple …
   492→export function type …
   522→export function union …
   574→export function unknown …

src/structs/utilities.ts
     1→import { Context, Struct, Validator } from '../struct.js …
     2→import { …
     8→import { object, optional, type } from './types.js …
    60→export function assign(...Structs: Struct<any>[]): any {
    61→  const isType = Structs[0].type === 'type'
    62→  const schemas = Structs.map((s) => s.schema)
      →  …
    71→export function define …
    80→export function deprecated …
   106→export function dynamic …
   140→export function lazy …
   171→export function omit …
   197→export function partial …
   221→export function pick …
   247→export function struct …

src/utils.ts
     1→import { Struct, Infer, Result, Context, Describe } from './struct.js'
     2→import { Failure } from './error.js'
     8→function isIterable<T>(x: unknown): x is Iterable<T> {
    13→ * Check if a value is a plain object.
    16→export function isObject(x: unknown): x is object {
    21→ * Check if a value is a non-array object.
    24→export function isNonArrayObject(x: unknown): x is object {
    29→ * Check if a value is a plain object.
    32→export function isPlainObject(x: unknown): x is { [key: string]: any } {
    42→ * Return a value as a printable string.
    45→export function print(value: any): string {
    54→ * Shifts (removes and returns) the first value from the `input` iterator.
    55→ * Like `Array.prototype.shift()` but for an `Iterator`.
    58→export function shiftIterator<T>(input: Iterator<T>): T | undefined {
    64→ * Convert a single validation result to a failure.
    67→export function toFailure<T, S>(
    68→  result: string | boolean | Partial<Failure>,
    69→  context: Context,
    70→  struct: Struct<T, S>,
    71→  value: any
    72→): Failure | undefined {
   202→export type UnionToIntersection …
   212→export type Assign …
   218→export type EnumSchema …
   227→export type IsMatch …
   233→export type IsExactMatch …
   242→export type IsRecord …
   251→export type IsTuple …
   267→export type IsUnion …
   277→export type ObjectSchema …
   283→export type ObjectType …
   291→export type OmitBy …
   300→export type Optionalize …
   307→export type PartialObjectSchema …
   315→export type PickBy …
   324→export type Simplify …
   328→export type If<B extends Boolean, Then, Else> = B extends true ? Then : Else
   334→export type StructSchema …
   379→export type TupleSchema …
   385→export type AnyStruct …
   394→export type InferStructTuple …
   402→type _InferTuple …

test/api/create.test.ts
     2→import { …

test/api/mask.test.ts
     2→import { …

test/api/validate.test.ts
     2→import { …

test/deprecated.test.ts
     2→import { any, assert, deprecated } from '../src'

test/index.test.ts
     5→import { …

test/index.ts
     2→ * A helper for testing type signatures.
     5→export function test<T>(fn: (x: unknown) => T) {}

test/tsconfig.json

test/typings/describe.ts
     1→import { …

test/validation/function/invalid.ts
     1→import { func } from '../../../src'
     3→export const Struct = func()
     5→export const data = false
     7→export const failures = [

test/validation/function/valid.ts
     1→import { func } from '../../../src'
     3→export const Struct = func()
     5→export const data = function () {}
     7→export const output = data

test/validation/object/invalid-array.ts
     1→import { object } from '../../../src'
     3→export const Struct = object()
     5→export const data = []
     7→export const failures = [

test/validation/object/invalid-property.ts
     1→import { object, string, number } from '../../../src'
     3→export const Struct = object({
     9→export const data = {
    15→export const failures = [

test/validation/object/valid.ts
     1→import { object, string, number } from '../../../src'
     3→export const Struct = object({
     8→export const data = {
    13→export const output = {

test/validation/omit/valid.ts
     3→export const Struct = omit(
    11→export const data = {
    15→export const output = {

test/validation/partial/composed.ts
     3→export const Struct = partial(
    10→export const data = {
    14→export const output = {

test/validation/pick/valid.ts
     3→export const Struct = pick(
    11→export const data = {
    15→export const output = {

test/validation/string/invalid.ts
     1→import { string } from '../../../src'
     3→export const Struct = string()
     5→export const data = false
     7→export const failures = [

test/validation/type/invalid-array.ts
     1→import { type } from '../../../src'
     3→export const Struct = type({})
     5→export const data = []
     7→export const failures = [

test/validation/type/valid-instance.ts
     1→import { type, string } from '../../../src'
     3→class Person {
     6→  constructor(name: string) {

tsconfig.json
     2→  "include": ["./src/**/*.ts"],
     3→  "compilerOptions": {
    16→  }
    17→}
