tests/snapshots/snapshots__budget_superstruct_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (508 words)

Changelog.md
     1→# Changelog …
Readme.md
    42→### Usage …
   145→### Why? …
   167→### Principles …
   181→### Demo …
   189→### Examples …
   205→### Documentation …
   231→### License …
docs/guides/01-getting-started.md
     1→# Getting Started …
     3→## Installing Superstruct
     5→To install Superstruct run:
     6→
     7→```bash
     8→npm install --save superstruct
     9→```
    10→
    11→And then you can import it:
    12→
    13→```ts
      →…
docs/guides/02-validating-data.md
     1→# Validating Data …
docs/guides/03-coercing-data.md
     1→# Coercing Data …
docs/guides/04-refining-validation.md
     1→# Refining Validation …
docs/guides/05-handling-errors.md
     1→# Handling Errors …
docs/guides/06-using-typescript.md
     1→# Using TypeScript …
docs/readme.md
     7→### Usage
     9→Superstruct allows you to define the shape of data you want to validate:
    10→
    11→```js
      →…
docs/reference/coercions.md
     1→# Coercions …
docs/reference/core.md
     1→# Core …
     3→### `assert` …
docs/reference/errors.md
     1→# Errors …
docs/reference/refinements.md
     1→# Refinements …
docs/reference/types.md
     1→# Types …
docs/reference/typescript.md
     1→# TypeScript …
     5→## Utilities …
     7→### `Describe` …
docs/reference/utilities.md
     1→# Utilities …
docs/resources/faq.md
     1→# FAQ
     3→Some common questions you might have when first learning Superstruct.
     4→
docs/resources/links.md
     1→# Resources
     3→A few resources that are helpful for building with Superstruct.
     4→
     5→## Libraries …
docs/summary.md
     3→## Guides
     5→- [Getting Started](./guides/01-getting-started.md)
     6→- [Validating Data](./guides/02-validating-data.md)
     7→- [Coercing Data](./guides/03-coercing-data.md)
     8→- [Refining Validation](./guides/04-refining-validation.md)
     9→- [Handling Errors](./guides/05-handling-errors.md)
    10→- [Using TypeScript](./guides/06-using-typescript.md)
    11→
    12→## API Reference
    14→- [Core](./reference/core.md)
    15→- [Types](./reference/types.md)
    16→- [Refinements](./reference/refinements.md)
    17→- [Coercions](./reference/coercions.md)
    18→- [Utilities](./reference/utilities.md)
    19→- [Errors](./reference/errors.md)
    20→- [TypeScript](./reference/typescript.md)
    21→
    22→## Resources
    24→- [FAQ](./resources/faq.md)
    25→- [Links](./resources/links.md)
examples/README.md
     1→# Examples …
rollup.config.js
src/error.ts
    25→export class StructError extends TypeError {
    26→  value: any
    27→  key!: any
    28→  type!: string
    29→  refinement!: string | undefined
    30→  path!: Array<any>
    31→  branch!: Array<any>
    32→  failures: () => Array<Failure>;
    33→  [x: string]: any
    34→
    35→  constructor(failure: Failure, failures: () => Generator<Failure>) {
src/struct.ts
    10→export class Struct<T = unknown, S = unknown> {
    11→  readonly TYPE!: T
    12→  type: string
    13→  schema: S
    14→  coercer: (value: unknown, context: Context) => unknown
    15→  validator: (value: unknown, context: Context) => Iterable<Failure>
    16→  refiner: (value: T, context: Context) => Iterable<Failure>
    17→  entries: (
    18→    value: unknown,
    19→    context: Context
    22→  constructor(props: {
    67→  assert …
    75→  create …
    83→  is …
    93→  mask …
   107→  validate …
   123→export function assert …
   139→export function create …
   157→export function mask …
   175→export function is …
   185→export function validate …
src/structs/coercions.ts
src/structs/refinements.ts
    21→function getSize(value: string | any[] | Map<any, any> | Set<any>): number {
src/structs/types.ts
    33→export function array …
   105→export function enums …
   204→export function literal …
   230→export function map …
   298→export function object …
   415→export function set …
src/structs/utilities.ts
    60→export function assign …
src/utils.ts
     4→/**
     5→ * Check if a value is an iterator.
     6→ */
     7→
     8→function isIterable<T>(x: unknown): x is Iterable<T> {
     9→  return isObject(x) && typeof x[Symbol.iterator] === 'function'
    10→}
    16→export function isObject …
    24→export function isNonArrayObject …
    32→export function isPlainObject …
    45→export function print …
    58→export function shiftIterator …
    67→export function toFailure …
   328→export type If<B extends Boolean, Then, Else> = B extends true ? Then : Else
   402→type _InferTuple …
test/index.ts
     1→/**
      →…
     5→export function test<T>(fn: (x: unknown) => T) {}
test/typings/infer.ts
test/validation/boolean/invalid.ts
test/validation/boolean/valid.ts
test/validation/function/invalid.ts
test/validation/function/valid.ts
     5→export const data = function () {}
test/validation/instance/invalid.ts
test/validation/instance/valid.ts
test/validation/literal/invalid.ts
test/validation/literal/valid.ts
test/validation/never/invalid.ts
test/validation/number/invalid.ts
test/validation/number/valid.ts
test/validation/type/valid-instance.ts
     3→class Person {
     6→  constructor(name: string) {
