tests/snapshots/snapshots__budget_superstruct_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (8 words)

error.ts
index.ts
struct.ts
structs/coercions.ts
structs/refinements.ts
structs/types.ts
structs/utilities.ts
utils.ts
