tests/snapshots/snapshots__budget_superstruct_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 300 → level 2 (283 words)

error.ts
     5→export type Failure
    25→export class StructError
    35→  constructor
index.ts
struct.ts
    10→export class Struct
    22→  constructor
    67→  assert
    75→  create
    83→  is
    93→  mask
   107→  validate
   123→export function assert
   139→export function create
   157→export function mask
   175→export function is
   185→export function validate
   221→export type Context
   231→export type Infer
   237→export type Describe
   243→export type Result
   253→export type Coercer
   259→export type Validator
   266→export type Refiner
structs/coercions.ts
    16→export function coerce
    38→export function defaulted
    79→export function trimmed
structs/refinements.ts
     8→export function empty
    21→function getSize
    33→export function max
    55→export function min
    77→export function nonempty
    93→export function pattern
   109→export function size
   146→export function refine
structs/types.ts
    19→export function any
    33→export function array
    60→export function bigint
    70→export function boolean
    83→export function date
   105→export function enums
   131→export function func
   144→export function instance
   159→export function integer
   172→export function intersection
   204→export function literal
   230→export function map
   258→export function never
   266→export function nullable
   278→export function number
   298→export function object
   351→export function optional
   367→export function record
   402→export function regexp
   415→export function set
   442→export function string
   456→export function tuple
   492→export function type
   522→export function union
   574→export function unknown
structs/utilities.ts
    60→export function assign
    71→export function define
    80→export function deprecated
   106→export function dynamic
   140→export function lazy
   171→export function omit
   197→export function partial
   221→export function pick
   247→export function struct
utils.ts
     8→function isIterable
    16→export function isObject
    24→export function isNonArrayObject
    32→export function isPlainObject
    45→export function print
    58→export function shiftIterator
    67→export function toFailure
   202→export type UnionToIntersection
   212→export type Assign
   218→export type EnumSchema
   227→export type IsMatch
   233→export type IsExactMatch
   242→export type IsRecord
   251→export type IsTuple
   267→export type IsUnion
   277→export type ObjectSchema
   283→export type ObjectType
   291→export type OmitBy
   300→export type Optionalize
   307→export type PartialObjectSchema
   315→export type PickBy
   324→export type Simplify
   328→export type If
   334→export type StructSchema
   379→export type TupleSchema
   385→export type AnyStruct
   394→export type InferStructTuple
   402→type _InferTuple
