tests/snapshots/snapshots__budget_superstruct_root_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 35 → level 0 (29 words)

Changelog.md
License.md
Readme.md
docs/guides/01-getting-started.md
docs/guides/02-validating-data.md
docs/guides/03-coercing-data.md
docs/guides/04-refining-validation.md
docs/guides/05-handling-errors.md
docs/guides/06-using-typescript.md
docs/readme.md
docs/reference/coercions.md
docs/reference/core.md
docs/reference/errors.md
docs/reference/refinements.md
docs/reference/types.md
docs/reference/typescript.md
docs/reference/utilities.md
docs/resources/faq.md
docs/resources/links.md
docs/summary.md
rollup.config.js
src/error.ts
src/index.ts
src/struct.ts
src/structs/coercions.ts
src/structs/refinements.ts
src/structs/types.ts
src/structs/utilities.ts
src/utils.ts
